--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,57 +1,79 @@
 version: '3.9'
 
 services:
-  server:
-    image: nginx:latest
-    volumes:
-      - ./:/var/www
-      - ./_docker/nginx/conf.d:/etc/nginx/conf.d
-      #    ports:
-      #      - "80:80"
-    labels:
-      - "traefik.http.routers.server.rule=Host(`api.testdomain.ru`)"
-      - "traefik.port=80"
-      - "traefik.docker.network=web"
-    #      - "traefik.http.routers.server.entrypoints=websecure"
-    #      - "traefik.http.routers.server.tls.certresolver=myresolver"
-    depends_on:
-      - app
-    container_name: hk_server
-    networks:
-      - web
-      - internal
-
+  # Application
   app:
     build:
       context: .
-      dockerfile: _docker/app/Dockerfile
+      dockerfile: _docker/app.dockerfile
+    working_dir: /var/www
     volumes:
       - ./:/var/www
-      - ./_docker/php/conf.d/php.ini:/usr/local/etc/php/conf.d/php.ini
     depends_on:
-      - db
-    container_name: hk_app
+      - "database"
     networks:
       - web
-
-  db:
-    image: mysql:8.0
-    restart: always
+      - internal
+    container_name: hk_app
+  # Web Server
+  server:
+    build:
+      context: .
+      dockerfile: _docker/web.dockerfile
+    working_dir: /var/www
     volumes:
-      - ./tmp/db:/var/lib/mysql
+      - ./:/var/www
+      - ./_docker/vhost.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - "app"
+    container_name: hk_server
+    labels:
+      - "traefik.http.routers.server.rule=Host(`api.djtresk.ru`)"
+      - "traefik.port=80"
+      - "traefik.docker.network=web"
+      - "traefik.http.routers.server.entrypoints=websecure"
+      - "traefik.http.routers.server.tls.certresolver=myresolver"
+    networks:
+      - web
+      - internal
+  # Database
+  database:
+    image: mysql:8.0
+    volumes:
+      - dbdata:/var/lib/mysql
     environment:
-      MYSQL_DATABASE: happykids
+      environment:
+      MYSQL_DATABASE: hk
       MYSQL_ROOT_PASSWORD: 'root'
     ports:
-      - "3306:3306"
-    command: mysqld --character-set-server=utf8 --collation-server=utf8_unicode_ci
+      - "33061:3306"
     container_name: hk_db
     networks:
       - internal
       - web
+  # Database management
+  pma:
+    image: phpmyadmin:5.1
+    environment:
+      - PMA_ARBITRARY=1
+      - PMA_HOST=${DB_HOST}
+      - PMA_USER=${DB_USERNAME}
+      - PMA_PASSWORD=${DB_PASSWORD}
+      - PMA_PORT=${DB_PORT}
+    depends_on:
+      - database
+    ports:
+      - "8888:80"
+    networks:
+      - web
+      - internal
+    container_name: hk_pma
 
 networks:
   web:
     external: true
   internal:
     external: false
+
+volumes:
+  dbdata:
