--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - internal
     container_name: hk_app
   # Web Server
-  server:
+  hk_server:
     build:
       context: .
       dockerfile: _docker/web.dockerfile
@@ -28,11 +28,11 @@ services:
       - "app"
     container_name: hk_server
     labels:
-      - "traefik.http.routers.server.rule=Host(`api.djtresk.ru`)"
+      - "traefik.http.routers.hk_server.rule=Host(`api.djtresk.ru`)"
       - "traefik.port=80"
       - "traefik.docker.network=web"
-      - "traefik.http.routers.server.entrypoints=websecure"
-      - "traefik.http.routers.server.tls.certresolver=myresolver"
+      - "traefik.http.routers.hk_server.entrypoints=websecure"
+      - "traefik.http.routers.hk_server.tls.certresolver=myresolver"
     networks:
       - web
       - internal
@@ -46,7 +46,7 @@ services:
       MYSQL_DATABASE: hk
       MYSQL_ROOT_PASSWORD: 'root'
     ports:
-      - "33061:3306"
+      - "33062:3306"
     container_name: hk_db
     networks:
       - internal
@@ -63,7 +63,7 @@ services:
     depends_on:
       - database
     ports:
-      - "8888:80"
+      - "8889:80"
     networks:
       - web
       - internal
